Fix overflow scroll bug in shadcn select,dropdown. remove mock data in header and remove useless component

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -60,6 +60,10 @@
   }
 }
 
+[data-scroll-locked][data-scroll-locked] {
+  overflow: scroll !important;
+}
+
 
 @layer base {
   * {
